<resources>
    <string name="app_name">FitnessApp</string>

    //login
    <string name="loginImg">Login Image</string>
    <string name="txtUser">Username</string>
    <string name="txtPass">Password</string>
    <string name="btnLogin">Login</string>
    <string name="btnRegister">Register</string>

    //registration
    <string name="registration">Registration</string>
    <string name="regFullName">Full Name</string>
    <string name="regWeight">Weight</string>
    <string name="regBirthday">YYYY/MM/DD</string>


    //nav stuff
    <string name="profile">My Profile</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>

    //fragment stuff
    <string name="hello_blank_fragment">Hello blank fragment</string>
    //profile fragment
    <string name="txtProfile">My Profile</string>
    <string name="labelUser">User:</string>
    <string name="labelBio">Bio</string>

    //Workout Page
    <string name="workoutsTitle">Compile a Workout Session</string>
    <string name="exerciseAddBtn">Add Exercise</string>
    <string-array name="exerciseList">
        <item>Push-ups</item>
        <item>Sit-ups</item>
        <item>Crunches</item>
        <item>Lunges</item>
        <item>Squats</item>
    </string-array>
    <string name="currentItemsTitle">Current Exercises</string>

    //Achievements Page
    <string name="achievementsTitle">Achievements</string>
    <string name="currentAchievementsTitle">Current Achievements</string>
    <string name="unachievedTitle">Not Yet Achieved</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

</resources>